--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -4,8 +4,8 @@
     <div class="text-secondary mt-2">Processing...</div>
   </div>
 </div>
-<div class="d-flex flex-column w-100 h-100">
-  <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
+<div class="d-flex flex-column w-100 h-100 page-padding bg-light-gray">
+  <!-- <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb> -->
   <odp-basic-info hideLogo="true" [(name)]="name" [(description)]="description"
     [edit]="{status:edit.status && canEditService}">
     <div class="d-flex justify-content-end align-items-center">
@@ -39,45 +39,45 @@
     </div>
   </odp-basic-info>
   <form [formGroup]="form" class="d-flex flex-column w-100 h-100 px-3">
-    <div class="d-flex flex-column w-100 h-100 border-top border-left border-right">
+    <div class="d-flex flex-column w-100 h-100 border-top border-left border-right rounded bg-white">
       <div class="tabs d-flex align-items-center border-bottom" (click)="showHiddenMenu()" id="sbTabs">
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasPermissionForTab('D')" (click)="activeTab=0"
+        <div class="font-13 pl-4 pr-2 font-weight-bold hover" *ngIf="hasPermissionForTab('D')" (click)="activeTab=0"
           [ngClass]="{'active':activeTab==0}">
           <span>Design</span>
           <span class="fa fa-circle fa-xs ml-2"
             [ngClass]="{'show':changesDoneInDesign,'text-danger':errorInDesign}"></span>
         </div>
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasPermissionForTab('I')" (click)="activeTab=1"
+        <div class="font-13 px-2  hover" *ngIf="hasPermissionForTab('I')" (click)="activeTab=1"
           [ngClass]="{'active':activeTab==1}">
           <span>Integration</span>
           <span class="fa fa-circle fa-xs ml-2"
             [ngClass]="{'show':changesDoneInIntegration,'text-danger':errorInIntegration}"></span>
         </div>
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasPermissionForTab('E') && !isSchemaFree" (click)="activeTab=2"
+        <div class="font-13 px-2 hover" *ngIf="hasPermissionForTab('E') && !isSchemaFree" (click)="activeTab=2"
           [ngClass]="{'active':activeTab==2}">
           <span>Experience</span>
           <span class="fa fa-circle fa-xs ml-2"
             [ngClass]="{'show':changesDoneInExperience,'text-danger':errorInExperience}"></span>
         </div>
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasPermissionForTab('R')" (click)="activeTab=4"
+        <div class="font-13 px-2 hover" *ngIf="hasPermissionForTab('R')" (click)="activeTab=4"
           [ngClass]="{'active':activeTab==4}">
           <span>Roles</span>
           <span class="fa fa-circle fa-xs ml-2"
             [ngClass]="{'show':changesDoneInRoles,'text-danger':errorInRoles}"></span>
         </div>
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasPermissionForTab('S')" (click)="activeTab=3"
+        <div class="font-13 px-2 hover" *ngIf="hasPermissionForTab('S')" (click)="activeTab=3"
           [ngClass]="{'active':activeTab==3}">
           <span>Settings</span>
           <span class="fa fa-circle fa-xs ml-2"
             [ngClass]="{'show':changesDoneInConfiguration,'text-danger':errorInConfiguration}"></span>
         </div>
-        <div class="text-dark px-3 py-2 hover" (click)="activeTab=5" [ngClass]="{'active':activeTab==5}"
+        <div class="font-13 px-2 hover" (click)="activeTab=5" [ngClass]="{'active':activeTab==5}"
           *ngIf="!edit.status && hasPermissionStartsWith('PVDSA','SM')">
           Audit
         </div>
-        <div class="text-dark px-3 py-2 hover" (click)="generateData();activeTab=10" [ngClass]="{'active':activeTab==10}"
+        <div class="font-13 px-2 hover" (click)="generateData();activeTab=10" [ngClass]="{'active':activeTab==10}"
           *ngIf="clickCount>9">JSON</div>
-        <div class="text-dark px-3 py-2 hover" (click)="generateData();activeTab=11" [ngClass]="{'active':activeTab==11}"
+        <div class="font-13 px-2 hover" (click)="generateData();activeTab=11" [ngClass]="{'active':activeTab==11}"
           *ngIf="clickCount>9">Schema</div>
       </div>
       <div class="builder-body d-flex flex-column w-100" *ngIf="hasAnyTabPermission">
@@ -102,8 +102,8 @@
             </div>
           </div>
           <div class="w-100 builder" [ngClass]="{'d-none':activeTab != 0,'d-flex':activeTab == 0}" *ngIf="!isSchemaFree">
-            <div class="d-flex flex-column w-100" >
-              <div class="options d-flex justify-content-between align-items-center border-bottom px-3">
+            <div class="d-flex flex-column w-100 p-4" >
+              <div class="options d-flex justify-content-between align-items-center px-3">
                 <span class="text-dark font-weight-bold">Attributes</span>
                 <div class="d-flex justify-content-end align-items-center"
                   *ngIf="edit.status && serviceObj?.type!=='internal'">
@@ -147,7 +147,7 @@
                 </ng-container>
               </div>
             </div>
-            <div class="properties-wrapper builder-body border-left">
+            <div >
               <odp-structure-field-properties [edit]="edit" [type]="serviceObj?.type" [(mainForm)]='form'>
               </odp-structure-field-properties>
             </div>
@@ -158,7 +158,7 @@
           </odp-integration>
         </ng-container>
         <ng-container *ngIf="activeTab == 2">
-          <div class="w-100 builder d-flex ">
+          <div class="w-100 builder d-flex">
             <div class='d-flex flex-column p-3' id='experience-side-nav'>
               <div class='mb-3'>
                 <span class='side-nav-tab'
