--- a/src/app/utils/basic-info/basic-info.component.html
+++ b/src/app/utils/basic-info/basic-info.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <div class="right-side d-flex align-items-start justify-content-end">
+  <div class="right-side d-flex align-items-center justify-content-end">
     <ng-content></ng-content>
   </div>
 </div>
