--- a/src/app/utils/structure-field-properties/date-property/date-property.component.html
+++ b/src/app/utils/structure-field-properties/date-property/date-property.component.html
@@ -1,8 +1,8 @@
 <div [formGroup]="form.get('properties')">
   <div class="d-flex flex-column w-100 my-2" *ngIf="form.get('properties.defaultTimezone')">
-    <div class="d-flex position-relative ">
-      <div class="label-width text-secondary">Default Timezone</div>
-      <div class="value-width">
+    <div class="position-relative">
+      <div class="text-secondary">Default Timezone</div>
+      <div>
         <odp-timezone-picker [edit]="edit" formControlName="defaultTimezone"></odp-timezone-picker>
         <!-- <select *ngIf="canEdit" class="form-control" formControlName="defaultTimezone">
           <option *ngFor="let tz of timezones" [value]="tz">{{tz}}</option>
@@ -16,9 +16,9 @@
       </div>
     </div>
   </div>
-<div class="d-flex w-100 mb-4" *ngIf="form.get('properties.supportedTimezones')">
-    <div class="label-width text-secondary">Supported Timezones</div>
-    <div class="value-width position-relative">
+  <div class="w-100 mb-4" *ngIf="form.get('properties.supportedTimezones')">
+    <div class=" text-secondary">Supported Timezones</div>
+    <div class=" position-relative">
       <ng-container *ngIf="edit.status">
         <!-- <select *ngIf="canEdit" class="form-control pr-5" (ngModelChange)="addToList('supportedTimezones')" type="text"
           formControlName="_listInput">
