--- a/src/app/utils/structure-field-properties/library-property/library-property.component.html
+++ b/src/app/utils/structure-field-properties/library-property/library-property.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="form.get('properties')">
-  <div class="d-flex w-100 mb-4">
-    <div class="label-width text-secondary">Linked Library</div>
-    <div class="value-width">
+  <div class="w-100 mb-4">
+    <div class="text-secondary">Linked Library</div>
+    <div >
       <ng-container *ngIf="edit.status">
         <input *ngIf="libraries.length==0 || libraries.length>10" class="form-control" type="text" [ngbTypeahead]="searchSchema" [inputFormatter]="formatter"
           #schema="ngbTypeahead" (selectItem)="selectSchema($event)" [resultFormatter]="formatter"
