--- a/src/app/utils/structure-field-properties/user-property/user-property.component.html
+++ b/src/app/utils/structure-field-properties/user-property/user-property.component.html
@@ -1,9 +1,9 @@
 <div class="relation-properties-wrapper" [formGroup]="properties">
   <div class="sub-heading text-secondary bg-light mb-3 p-2">Advanced
     Properties</div>
-  <div class="d-flex w-100 mb-4">
-    <div class="label-width text-secondary">Search On Field</div>
-    <div class="value-width">
+  <div class="w-100 mb-4">
+    <div class=" text-secondary">Search On Field</div>
+    <div >
       <select *ngIf="edit.status" class="form-control" formControlName="relatedSearchField" id="searchOnField">
         <option [value]="null">---select---</option>
         <option *ngFor="let attr of attributeList" [value]="attr.key">{{attr.name}}</option>
@@ -12,9 +12,9 @@
       <span *ngIf="!edit.status && !relatedSearchField" class="text-muted">Not Defined</span> -->
     </div>
   </div>
-  <div class="d-flex w-100 mb-4">
-    <div class="label-width text-secondary">View Fields</div>
-    <div class="value-width">
+  <div class="w-100 mb-4">
+    <div class=" text-secondary">View Fields</div>
+    <div >
       <select *ngIf="edit.status" class="form-control" #selectedField formControlName="_listInput" (change)="addToList('relatedViewFields',attributeList[selectedField.selectedIndex-1])">
         <option [value]="null">---select---</option>
         <option *ngFor="let attr of attributeList" [value]="attr.key">{{attr.name}}</option>
@@ -31,9 +31,9 @@
     <button type="button" class="btn btn-dark my-1 w-100" *ngIf="relatedViewFields.length>2 && edit.status" (click)="clearViewFields()">Clear
       All</button>
   </div>
-  <div class="d-flex w-100 mb-4">
-    <div class="label-width text-secondary">Default Value  </div>
-    <div class="value-width">
+  <div class="w-100 mb-4">
+    <div class=" text-secondary">Default Value  </div>
+    <div >
       <ng-container *ngIf="edit.status">
         <input class="form-control defaultEle" type="text" formControlName="_default" [ngbTypeahead]="searchDocumments" [inputFormatter]="documentFormatter"
           #defaultEle="ngbTypeahead" id="defaultEle" (selectItem)="selectDocument($event)" [resultFormatter]="documentFormatter"
@@ -48,9 +48,9 @@
       <span *ngIf="!edit.status && !default" class="text-muted">Not Defined</span>
     </div>
   </div>
-  <div class="d-flex w-100 mb-4" *ngIf="!required">
-    <div class="label-width text-secondary">Allow deletion of related users</div>
-    <div class="value-width">
+  <div class="w-100 mb-4" *ngIf="!required">
+    <div class=" text-secondary">Allow deletion of related users</div>
+    <div >
       <odp-switch [edit]="edit" [(checked)]="allowDeletion"></odp-switch>
     </div>
   </div>
