--- a/src/app/utils/structure-field/structure-field.component.scss
+++ b/src/app/utils/structure-field/structure-field.component.scss
@@ -2,9 +2,12 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 .field-wrapper {
-  min-height: 36px;
-  max-height: 36px;
-  border-left: 5px solid transparent;
+  min-height: 52px;
+  border-radius: 6px;
+  max-height: 52px;
+  margin-bottom: 6px;
+  background: $light;
+  font-size: 14px;
   &.active {
     border-left-color: $dark;
   }
