--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -146,7 +146,7 @@
   </div>
   <div *ngIf="isCreate || addNewKey || addNewProperty" class="slide-overlay position-fixed"></div>
   <div *ngIf="isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover close" id="closeicon" (click)="closeWindow()"></span>
+    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">Create Bot</h5>
@@ -159,22 +159,24 @@
           <sup class="text-danger">*</sup>
         </label>
 
-        <input class="form-control" type="text" formControlName="botName" placeholder="Type here" />
-        <span *ngIf="
+        <div class="input-group">
+          <input class="form-control" type="text" formControlName="botName" placeholder="Type here" />
+          <span *ngIf="
             (botForm.get('botName').touched || botForm.get('botName').dirty) &&
             botForm.get('botName').hasError('required')
           " class="text-danger position-absolute fa fa-exclamation-circle error-icon" container="body"
-          ngbTooltip="Name is required"></span>
-        <span *ngIf="
+            ngbTooltip="Name is required"></span>
+          <span *ngIf="
             (botForm.get('botName').touched || botForm.get('botName').dirty) &&
             botForm.get('botName').hasError('maxlength')
           " class="text-danger position-absolute fa fa-exclamation-circle error-icon" container="body"
-          ngbTooltip="Name should be within 30 characters"></span>
-        <span *ngIf="
+            ngbTooltip="Name should be within 30 characters"></span>
+          <span *ngIf="
             (botForm.get('botName').touched || botForm.get('botName').dirty) &&
             botForm.get('botName').hasError('pattern')
           " class="text-danger position-absolute fa fa-exclamation-circle error-icon" container="body"
-          ngbTooltip="Name can contain alphanumeric and  _,- , @ , # and . characters only"></span>
+            ngbTooltip="Name can contain alphanumeric and  _,- , @ , # and . characters only"></span>
+        </div>
       </div>
       <div class="form-group position-relative">
         <label for="desc"> Description </label>
@@ -192,7 +194,7 @@
     </form>
   </div>
   <div *ngIf="addNewKey && !isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover close" id="closeicon" (click)="closeWindow()"></span>
+    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">{{ editMode ? 'Edit Key' : 'Create Key' }}</h5>
@@ -205,7 +207,7 @@
           <sup class="text-danger">*</sup>
         </label>
 
-        <div class="form-group position-relative">
+        <div class="input-group">
           <input newlabel type="text" class="form-control" id="name" placeholder="Give a label to identify"
             formControlName="label" odpAutoFocus [ngClass]="{
               'is-invalid':
@@ -226,7 +228,7 @@
       </div>
       <div class="form-group position-relative">
         <label for="expires"> Expiry </label>
-        <div class="form-group position-relative">
+        <div class="input-group">
           <input type="number" class="form-control" formControlName="expires" [ngClass]="{
               'is-invalid':
                 keyForm.get('expires').invalid &&
@@ -268,7 +270,7 @@
     </form>
   </div>
   <div *ngIf="addNewProperty && !isCreate" class="slide-window position-fixed bg-white border-left p-4">
-    <span class="fa fa-times text-secondary hover close" id="closeicon" (click)="closeWindow()"></span>
+    <span class="fa fa-times text-secondary hover float-right" id="closeicon" (click)="closeWindow()"></span>
     <div class="d-flex align-items-center justify-content-between mb-4">
       <div class="d-flex align-items-center">
         <h5 class="font-weight-bold">
