--- a/src/app/home/local-bot/local-bot.component.scss
+++ b/src/app/home/local-bot/local-bot.component.scss
@@ -379,6 +379,7 @@
   text-decoration: underline;
   text-underline-offset: 10px;
   text-decoration-color: $orange;
+  color: $headings;
 }
 
 .tab-header {
