--- a/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.html
+++ b/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.html
@@ -6,24 +6,27 @@
 </div>
 
 
+
+<div class="d-flex mb-4">
+    <div>
+        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect('reset')" [selectOnEnter]="true">
+        </odp-search-box>
+    </div>
+    <div class="d-flex ml-auto mr-2">
+        <div class="add-attribute hover" (click)="add()">
+            <i class="fa fa-plus-circle font-xl icon-primary mr-2"></i>
+            <label class="fw-500 font-normal heading">Add Groups</label>
+
+        </div>
+    </div>
+</div>
+
+
 <div class="grid-container">
-    <ag-grid-angular style="height: 300px; overflow-x: hidden" #agGrid class="ag-theme-balham"
-        [gridOptions]="gridOptions" (gridReady)="onGridReady($event)">
+    <ag-grid-angular #agGrid class="ag-theme-balham table" [gridOptions]="gridOptions"
+        (gridReady)="onGridReady($event)">
     </ag-grid-angular>
 </div>
-<!-- <div class="d-flex flex-wrap team-container">
-    <div *ngFor="let team of userTeams"
-        class="d-flex flex-column align-items-center mb-3 py-2 team-overview position-relative">
-        <div *ngIf="hasPermission('PMBG')" class="position-absolute text-secondary remove-group" placement="left" ngbTooltip="Remove this group"  (click)="removeGroupForUser(team.name, team._id)">
-            <span class="fas fa-times"></span>
-        </div>
-        <div class="team bg-white d-flex flex-column justify-content-center align-items-center mb-2">
-            <span class="fas fa-users fa-lg mb-2 text-muted"></span>
-            <strong class="team-strength">{{team.users.length}}</strong>
-        </div>
-        <span>{{team.name}}</span>
-    </div>
-</div> -->
 
 <odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteModal($event)">
     <odp-user-icon [size]="18" color="202A36" class="mt-1"></odp-user-icon>
