--- a/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.scss
+++ b/src/app/home/local-bot/manage-bot-group/manage-bot-group.component.scss
@@ -1,34 +1,42 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
+
 .team-container {
   padding: 15px;
   width: 100%;
+
   .team-overview {
     min-width: 130px;
     max-width: 130px;
     border-radius: 4px;
+
     .remove-group {
       top: 10px;
       right: 10px;
       display: none;
     }
+
     &:hover {
       background-color: $light;
+
       .remove-group {
         display: block;
       }
     }
   }
+
   .team {
     width: 96px;
     height: 96px;
     border-radius: 50%;
     border: 4px solid $light;
   }
+
   .app-admin {
     width: 500px;
     height: 260px;
     border-radius: 6px;
+
     .icon {
       min-width: 40px;
       max-width: 40px;
@@ -36,15 +44,23 @@
       max-height: 40px;
       border-radius: 50%;
       text-align: center;
+
       odp-app-icon {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
       }
     }
+
     .heading,
     .caption {
       text-align: center;
     }
   }
+}
+
+.table {
+  height: 400px;
+  max-height: 400px;
+  overflow-x: hidden
 }
