--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -5,9 +5,26 @@
     </div>
 </div>
 
+
+
+<div class="d-flex mb-4">
+    <div>
+        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect('reset')" [selectOnEnter]="true">
+        </odp-search-box>
+    </div>
+    <div class="d-flex ml-auto mr-2">
+        <div class="add-attribute hover" (click)="add()">
+            <i class="fa fa-plus-circle font-xl icon-primary mr-2"></i>
+            <label class="fw-500 font-normal heading">Add Property</label>
+
+        </div>
+    </div>
+</div>
+
+
 <div class="grid-container">
-    <ag-grid-angular #agGrid class="ag-theme-balham" style="height: 300px; overflow-x: hidden"
-        [gridOptions]="gridOptions" (gridReady)="onGridReady($event)" [frameworkComponents]="frameworkComponents">
+    <ag-grid-angular #agGrid class="ag-theme-balham table" [gridOptions]="gridOptions" (gridReady)="onGridReady($event)"
+        [frameworkComponents]="frameworkComponents">
     </ag-grid-angular>
 </div>
 
