--- a/src/app/utils/switch/switch.component.scss
+++ b/src/app/utils/switch/switch.component.scss
@@ -13,16 +13,11 @@
     margin: 0;
     padding: 0;
     display: inline-block;
-    <<<<<<< HEAD border: 1px solid #ccc;
     width: 40px;
     height: 24px;
     border-radius: 12px;
-    background: $lightgrey;
-    =======width: 40px;
-    height: 24px;
-    border-radius: 12px;
     background: #ccc;
-    >>>>>>>dev transition: 0.25s;
+    transition: 0.25s;
   }
 
   .toggler {
@@ -33,12 +28,10 @@
     height: 18px;
     border-radius: 9px;
     background: #fff;
-    border: 1px solid #eee;
-    left: 4px;
+    left: 3px;
     top: 3px;
     transition: 0.25s;
     position: absolute;
-    box-shadow: 0 3px 5px $border  !important;
   }
 
   input {
@@ -46,19 +39,7 @@
   }
 
   input:checked~.toggler {
-    left: 20px;
-  }
-
-  &.accent {
-    input:checked~.toggler {
-      border: 1px solid $accent;
-    }
-  }
-
-  &.primary {
-    input:checked~.toggler {
-      border: 1px solid $primary;
-    }
+    left: 18px;
   }
 }
 
@@ -71,4 +52,8 @@
   .fa {
     font-size: 10px;
   }
+}
+
+.text {
+  width: 32px;
 }
